<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".editModel.EditStoreFragment"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/common_padding_default">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperText="@string/helper_required"
            android:layout_marginHorizontal="@dimen/common_padding_default"
            android:hint="@string/hint_name"
            app:counterMaxLength="@integer/counter_max_name"
            app:counterEnabled="true"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_store">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUserName"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@integer/counter_max_name"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperText="@string/helper_required"
            android:layout_marginTop="@dimen/common_padding_default"
            android:layout_marginHorizontal="@dimen/common_padding_default"
            android:hint="@string/hint_phone"
            app:counterMaxLength="@integer/counter_max_phone"
            app:counterEnabled="true"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhone"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@integer/counter_max_phone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilWeb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperText="@string/helper_required"
            android:layout_marginTop="@dimen/common_padding_default"
            android:layout_marginHorizontal="@dimen/common_padding_default"
            android:hint="@string/hint_web"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_link">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etWeb"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceCaption"
                android:textColor="@color/color_link"
                android:maxLines="@integer/lines_url_website"
                android:minLines="@integer/lines_url_website"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/common_padding_default"
            android:gravity="center_vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPhotoUrl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/photo_url"
                android:layout_marginHorizontal="@dimen/common_padding_default"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_link"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhotoUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceCaption"
                    android:textColor="@color/color_link"
                    android:minLines="@integer/lines_url_photo"
                    android:maxLines="@integer/lines_url_photo"
                    android:inputType="textMultiLine"/>

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/imgPhoto"
                android:layout_width="@dimen/photo_size_thumb"
                android:layout_height="@dimen/photo_size_thumb"
                android:layout_marginStart="@dimen/common_padding_default"
                android:src="@drawable/ic_image"
                android:contentDescription="@string/description_img_photo"/>


        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>